Update go test arguments for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,6 +29,5 @@ steps:
 - task: Go@0
   inputs:
     command: 'test'
-    arguments: '-v'
-    workingDirectory: '$(modulePath)'
+    arguments: '-v ./...'
   displayName: "Execute Tests"
